# LAS-system

./: .dockerignore  .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
apps/backend/api/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  main.py  pyproject.toml
apps/backend/api/alembic/: env.py
apps/backend/api/alembic/versions/: 0001_initial_schema.py  0002_document_review_jobs.py
apps/backend/api/docs/: document_reviews_frontend.md
apps/backend/api/migrations/: 001_create_qa_history.sql  002_add_article_no_to_qa_sources.sql  003_add_snippet_text_to_qa_sources.sql  004_alter_feedback_thumbs_up.sql  005_feedback_unique_qa_id.sql
apps/backend/api/src/: db.py  dependencies.py  history.py
apps/backend/doc-processor/: .env.template  .gitignore  CLAUDE.md  Dockerfile  langgraph.json  llms.py  parser.py  pyproject.toml
apps/backend/doc-processor-old/: .env.template  CLAUDE.md  pyproject.toml
apps/backend/doc-processor-old/doc_processor/: llms.py  parser.py  review_pipeline.py  risk_analyzer.py  search.py
apps/backend/doc-processor-old/docs/: highlight-annotations.md  styling-reference.md
apps/backend/doc-processor-old/tests/: annotation_test.py  edit_assembler_test.py  generate_docx_samples.py
apps/backend/doc-processor/ci/: review_pipeline_ci.py
apps/backend/doc-processor/core/: docx_ir.py  edit_assembler.py  html_exporter.py  ir.py  style_extractor.py
apps/backend/doc-processor/doc_processor/: llms.py  parser.py
apps/backend/doc-processor/las_types/: ir_types.py  state_types.py
apps/backend/doc-processor/prompts/: prelim_categorization.txt  search_user_agent.txt
apps/backend/doc-processor/tests/: embedder_intel_test.ipynb  langgraph_parser.py  parser_test_base.ipynb  query_intel.py  review_pipeline_test.py  search_agent.py
apps/backend/doc_processor/: .env.example  __init__.py  main.py  pyproject.toml
apps/backend/doc_processor/agent/: __init__.py  parser.py  rules.py
apps/backend/doc_processor/core/: __init__.py  docx_markdown_exporter.py  docx_structured_exporter.py  hwp_converter.py  hwpx_markdown_exporter.py  hwpx_structured_exporter.py  markdown_exporter.py  structured_mapping_exporter.py  style_extractor.py
apps/backend/doc_processor/docs/: API&engine_transfer_plan.md  API_Implementation_plan.md  api_integration_plan.md  clause_parser_plans.md  contract_review_rag_flow.md  llm_tool_api.md  parser_usage.md  phase1_usage.md  structure.md
apps/backend/doc_processor/llm/: __init__.py  factory.py
apps/backend/doc_processor/processor_types/: __init__.py  builder.py  ir_types.py  state_types.py  style_types.py
apps/backend/doc_processor/prompts/: loader.py
apps/backend/doc_processor/tests/: .gitignore  DocIR_api_demo.ipynb  doc_processor_categorization_demo.ipynb  highlight_demo.ipynb  langfuse_export_check.py  manual_test.ipynb  manual_test.py  test_annotations.py  test_api.py  test_contract_review.py  test_document_edits.py  test_edit_engine.py  test_editor.py  test_env_loading.py  test_langfuse.py  test_llm_factory.py  test_observability.py  test_parser.py  test_phase1.py  test_processor_types.py  test_style_extractor.py
apps/backend/law-updater/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/backend/law-updater/config/: endpoint_registry_related.yaml
apps/backend/law-updater/scripts/: embed_qdrant_3collections.py  embed_qdrant_incremental.py  run_incremental_law_update.py  run_incremental_law_update_auto_date.py
apps/backend/legal-pipeline/: .env.example  .env.neo4j.example  .gitignore  README.md  appendix_preview.md  docker-compose.local-neo4j.yml  docker-compose.local-search.yml  docker-compose.neo4j.yml  main.py  pyproject.toml  run_labor_experiment.py
apps/backend/legal-pipeline/config/: appendix_asset_bundle_schema.json  appendix_dataset_schema.json  collection_scope.json  endpoint_registry_law.yaml  endpoint_registry_related.yaml
apps/backend/legal-pipeline/scripts/: build_clean_law_corpus.py  embed_handoff.py  embed_qdrant_3collections.py  embed_qdrant_incremental.py  estimate_openai_embedding_cost.py  experiment1_model_compare.py  experiment1_nl2cypher_compare.py  export_law_graph.py  rebuild_dataset_and_handoff.py  run_current_law_collection.py  run_full_collection.py  run_incremental_law_update.py  seed_law_graph_neo4j.py  sync_law_updater.sh
apps/backend/legal-pipeline/tests/: conftest.py  test_appendix_api_markdown.py  test_appendix_asset_pipeline.py  test_appendix_dataset_builder.py  test_appendix_parser.py  test_article_appendix_linker.py  test_case_reference_audit_dataset.py  test_dataset_builder.py  test_dataset_validation.py  test_embed_qdrant_3collections.py  test_embed_qdrant_incremental.py  test_embedding_backend.py  test_estimate_openai_embedding_cost.py  test_incremental_dataset_patch.py  test_incremental_scope.py  test_io_utils.py  test_law_corpus_refinement.py  test_law_delta_collector.py  test_law_graph_exporter.py  test_law_graph_neo4j_seed.py  test_law_meta.py  test_law_parser.py  test_law_reference_parser.py  test_law_sub_article_collector.py  test_law_to_law_relation_builder.py  test_legal_case_dataset_builder.py  test_legal_case_dedupe.py  test_legal_case_parser.py  test_legal_case_relation_builder.py  test_legal_doc_collector_expc_filter.py  test_legal_related_registry_validation.py  test_legal_relation_builder.py  test_load_opensearch_incremental.py  test_opensearch_common.py  test_registry_validation.py  test_related_doc_policy.py  test_run_incremental_law_update.py  test_scope_resolution.py
apps/backend/rag/: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
apps/backend/rag/cli/: evaluate_retrieval_gold.py  generate_answer.py  generator.py  index_embedded_jsonl.py  query_all_retrieval.py  query_hybrid_rrf.py  query_opensearch_bm25.py  query_qdrant_topk.py  retrieval_common.py
apps/backend/rag/eval/: RAGAS_EVAL.md  RAGAS_EVAL_v2.md  run_eval.py
apps/backend/rag/rag_pipeline/: env_config.py
apps/backend/rag/tests/: test_env_config.py  test_query_legal_db.py
(+372 files in other folders)
