[project]
name = "las-api"
version = "0.1.0"
description = "Legal AI Assistant FastAPI 서버"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "rag-pipeline",
]

[tool.uv.sources]
rag-pipeline = { path = "../rag", editable = true }

[tool.uv.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000"
dev = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
