[project]
name = "las-api"
version = "0.1.0"
description = "Legal AI Assistant FastAPI 서버"
requires-python = "==3.13.*"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "rag-pipeline",
]

[tool.uv.sources]
rag-pipeline = { path = "../rag", editable = true }
