[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", ".venv*"]

[tool.setuptools.package-data]
doc_processor = ["vendor/**/*", "prompts/*.txt"]

[project]
name = "doc_processor"
version = "0.1.0"
description = "HWPX document parsing and IR construction pipeline"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "jpype1>=1.6.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=0.3.0",
    "langchain-qdrant>=1.1.0",
    "langgraph>=0.3.0",
    "pydantic>=2.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "python-hwpx",
    "tabulate>=0.9.0",
    "transformers>=4.57.6",
    "langgraph-cli[inmem]>=0.1.0",
]

[project.optional-dependencies]
intel = [
    "openvino>=2026.0.0",
    "optimum-intel[openvino]",
    "optimum[nncf,openvino]>=2.1.0.dev0",
]

[tool.uv.sources]
python-hwpx = { git = "https://github.com/maxjo0418/python-hwpx.git" }
optimum-intel = { git = "https://github.com/huggingface/optimum-intel.git" }
