[project]
name = "doc-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jpype1>=1.6.0",
    "langgraph>=1.1.4",
    "langchain-google-genai>=2.1.8",
    "pydantic>=2.12.0",
    "python-dotenv>=1.0.1",
    "python-docx>=1.2.0",
    "python-hwpx",
    "langfuse>=2.0.0",
    "langchain>=1.2.14",
    "langchain-openai>=1.1.12",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
