[project]
name = "doc-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "document-processor",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
]

[tool.uv.sources]
document-processor = { git = "https://github.com/maxjo0418/document-processor.git" }
