[project]
name = "doc-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "document-processor",
    "langchain>=1.0.0",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "langfuse>=4.0.0",
    "langgraph>=1.1.6",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_processor"]

[tool.uv.sources]
document-processor = { git = "https://github.com/CGINSIDE-ROOKIES/document-processor.git" }
