[project]
name = "api-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "neo4j>=5.28.1",
    "tiktoken>=0.12.0",
    "python-dotenv>=1.2.2",
    "pdfplumber>=0.11.7",
    "pypdf>=6.13.0",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.1",
    "xmltodict>=1.0.4",
    "numpy>=2.4.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "reportlab>=4.4.3",
]
