[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Local RAG pipeline utilities for LAS-system"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "python-dotenv>=1.0.0",
    "sentence-transformers>=5.2.3",
]

[project.optional-dependencies]
eval = [
    "ragas>=0.2",
    "langchain-google-genai>=2.0",
    "datasets>=2.19",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_pipeline*"]
