[project]
name = "rag-pipeline"
version = "0.1.0"
description = "API-backed RAG pipeline utilities for LAS-system"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "langfuse>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
eval = [
    "ragas>=0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_pipeline*"]
